[package]
name = "bera-reth"
version = "0.1.0"
edition = "2024"

[dependencies]
reth = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-chainspec = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-network-peers = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-cli-util = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-ethereum-cli = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-node-builder = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-node-ethereum = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-node-api = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-trie-db = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-evm-ethereum = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-evm = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-db = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-cli-commands = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-cli = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-tracing = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
reth-rpc = { git = "https://github.com/rezbera/reth", branch = "with-rose" }
alloy-eips ="1.0.9"
alloy-genesis = "1.0.9"
alloy-consensus = "1.0.9"
alloy-rpc-types = "1.0.9"
derive_more = "2.0.1"
clap = { version = "4.5.39", features = ["derive"] }
tracing = "0.1.41"
eyre = "0.6"
jsonrpsee-core = "0.25.1"

[patch.crates-io]
#alloy-consensus = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-eips = { git = "https://github.com/rezbera/alloy", branch = "BRIP-0002" }
#alloy-genesis = { git = "https://github.com/rezbera/alloy", branch = "BRIP-0002" }
#alloy-json-rpc = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-network = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-network-primitives = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-provider = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-pubsub = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-client = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-admin = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-anvil = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-beacon = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-debug = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-engine = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-eth = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-mev = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-trace = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-rpc-types-txpool = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-serde = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-signer = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-signer-local = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-transport = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-transport-http = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-transport-ipc = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}
#alloy-transport-ws = { git = "https://github.com/rezbera/alloy", branch ="BRIP-0002"}

[net]
git-fetch-with-cli = true
